[package]
name = "client-server-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.37"
colored = "2.1.0"
ctrlc = "3.4.4"
fs2 = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
sha1 = "0.10.6"
